v3.6/architecture/abstraction.md
---
title: Rainbond设计思路与产品抽象
summary: Rainbond设计思路与产品抽象
toc: false
toc_not_nested: true
asciicast: true
---
<div class="filters filters-big clearfix">
    <a href="design-concept.html"><button class="filter-button">设计思想</button></a>
    <a href="abstraction.html"><button class="filter-button current"><strong>抽象设计</strong></button></a>
</div>

<div id="toc"></div>

本文介绍Rainbond几个核心抽象：

## 数据中心

一般是指所处某一个地理区域或者具有某个特定功能划分的计算资源集合，安装了Rainbond的计算资源抽象服务，对外提供标准的操作接口的计算资源池，数据中心确定了应用运行的调度范围。例如，阿里云上海数据中心，即使用阿里云上海区域的资源搭建的Rainbond数据中心。私有云用户可能搭建：测试数据中心，生产数据中心。数据中心与数据中心之间资源完全隔离，数据中心内租户之间资源隔离。

## 应用
应用是指提供某项服务的最小单元，其应该具有一个或多个服务端口，可以单独部署。其应用具有以下属性：

- 伸缩属性   
> 应用伸缩分为垂直伸缩和水平伸缩，垂直伸缩是通过增加或减少一个实例内存和CPU的资源调整应用负载能力，水平伸缩是通过增加或减少应用实例调整应用负载能力和容错能力。具备水平伸缩属性的应用一般是无状态应用或可水平伸缩的集群应用。

- 环境与依赖属性
> 应用环境大部分基于环境变量定义，其他应用依赖，例如一个网站应用依赖Mysql数据库应用通过依赖属性定义。

- 端口属性   
> 应用对外服务的范围通过应用端口属性定义，一般一个应用具有一个服务端口，根据其是对内服务还是对公网服务的不同更改其开放属性。

- 存储属性
> 应用产生数据持久化存储要求不一样，可以选择不同的持久化形式，也可以通过共享的形式读取其他应用产生的数据。

- 插件属性   
> 应用需要开通不同的附加功能可以通过开通不同的插件。

- 健康属性   
> 默认的情况下平台任务应用进程启动即运行成功，实际情况下应用业务并不一定健康，定义业务级的健康检查机制有助于平台正确的判断应用状态和进行自动化的管理操作。

- 监控属性   
> 平台默认为应用提供业务级性能分析，需要应用指定业务服务协议。

- 部署属性   
> 平台为不同的应用绑定不同的部署和调度策略，应用需要指定部署类型，包含有状态应用和无状态应用，一般需要固定网络名称或存储不同共享的应用设置为有状态应用。

- 版本构建属性   
> 应用的构建来源不同平台体现的管理操作不同，目前应用构建来源有源码或Docker镜像，不同的源码类型平台生成的默认环境配置不同，正常情况下应用构建属性由平台智能识别。

## 应用组
应用组由多个具有依赖关系的应用构成，一般是指一个完整的业务系统或一类具有类似功能的应用组合。应用组强调整体性，包括整体状态，流量走势，整体分享与交付和批量控制。

## 插件
插件是应用额外功能的扩展，其主要是以实体程序的形式，其具有与绑定应用一致的运行环境（存储、网络、环境配置）。插件分为几个类型：

- 入口网络治理类型   
> 入口网络治理插件通常是指能够拦截应用端口服务的插件，外部请求先经过插件再到达应用。例如权限验证，防火墙或日志记录。

- 出口网络治理类型   
> 出口网络治理插件通常是指能够拦截当前应用访问上游依赖服务的网络的插件，对上游服务的请求先到达插件，再由插件负载到上游服务的某个实例上，例如ServiceMesh插件。

- 性能分析类型   
> 性能分析插件能够以某种实现分析出应用的吞吐率，响应时间，访问人数等指标，通过statsd指标规范传递给平台。

- 应用初始化类型   
> 应用初始化插件在应用启动前运行完成并退出，一般完成数据初始化，外部依赖初始化等功能。

- 一般类型   
> 其他类型插件

## 团队（租户）

团队是一种组织形式，可以是一个实际的企业组织，也可以以业务系统为分类的组织。团队可以在某个数据中心开通一个租户，租户定义了网络、存储等资源的隔离范围，团队内部可以制定用户权限管理机制。上诉几类抽象都会属于某个团队。



