v5.0/architecture/abstraction.md
---
title: Rainbond模型抽象
summary: Rainbond模型抽象
toc: true
toc_not_nested: true
asciicast: true
---
<div class="filters filters-big clearfix">
    <a href="design-concept.html"><button class="filter-button">设计思想</button></a>
    <a href="abstraction.html"><button class="filter-button current"><strong>产品抽象</strong></button></a>
</div>
本文介绍Rainbond的核心模型抽象：

<div id="toc"></div>

## 计算资源相关

### 数据中心（region）

从物理层面，数据中心是由处于同一机房的多台处于同一通信网络的机器组成，其具有计算资源的边界。

从逻辑层面，Rainbond数据中心是一个包含存储节点、网络控制节点、负载均衡节点、计算节点和管理节点的集合体。数据中心内部具有独立的区域网络和计算资源自动调度管理模式，屏蔽不同的物理资源差异。对外提供标准的RestfulAPI接口，为上层控制端点提供计算服务。

例如，阿里云上海数据中心，即使用阿里云上海区域的计算资源搭建的Rainbond数据中心。

私有云用户可能搭建：测试数据中心，生产数据中心。数据中心与数据中心之间资源完全隔离，数据中心内租户之间资源隔离。

### 租户(tenant)

租户作为数据中心内部的资源隔离的解决方案，既包含逻辑隔离，也包含物理隔离。每一个租户可以在数据中心内部获取一块相对独立的计算区域，比如网络上租户具有独立的子网，存储上也是独立的区域。

通常意义上我们称控制台团队在某个数据中心下是一个租户。

### 节点(node)

数据中心内部根据不同的功能属性区分以下节点类型:

* 管理节点

  > 管理节点主要提供一系列面向上层控制端点的控制服务，比如创建应用，管理应用等。

* 计算节点

  > 计算节点是主要的节点类型，承担着应用的运行任务，为应用运行提供环境保障。

* 存储节点

  > 存储节点提供应用持久化数据高可用存储服务，可复用用户已有的存储集群（Ceph,GlusterFS等）

* 应用网关节点

  > 控制应用的外网访问入口，所有进入数据中心的应用流量从此节点通过，基础部署模型中我们将应用网关节点与管理节点合并部署。对于大型数据中心我们强烈建议将应用网关节点单独部署并对节点网络参数进行优化

* 网络控制节点

  > 负责租户子网的控制，取决于不同的租户子网解决方案， Calico网络类型不需要此类节点。

Rainbond对节点属性进行划分有助于对不同的节点进行不同的高可用保证方案，当然，不同的节点属性是可以服用机器节点的，Rainbond默认的安装策略是将所有属性建立在同一台机器之上（单节点）。对于生产的数据中心可根据机器规模合理分配。

## 平台相关

### 企业（Enterprise）

企业是Rainbond控制台的最高级抽象，下属团队抽象，企业级别控制平台级别的属性设置和资源配置。

### 团队 (Group)

团队是一种资源组织形式，可以是一个实际的企业组织，也可以以业务系统为分类的组织。团队可以在某个数据中心开通一个租户获得可用资源池。所有的业务模型都从属于团队，包括用户、应用、服务组件、插件、网关等。

## 应用（Application）

应用组由一个或多个具有依赖关系的服务组件构成，一般是指一个完整的业务系统或一类具有类似功能的应用组合。比如一个SpringCloud, ServiceMesh微服务架构业务系统等。应用组强调整体性，是Rainbond关于业务交付的核心抽象。

Rainbond提供对应用的整体管理流程，包括整体状态监控，业务拓扑，`整体分享与交付`和批量服务组件控制等。

### 服务组件（Service）

服务组件是Rainbond的控制核心承载体，是指提供某项服务的最小单元，其应该具有一个或多个服务端口，可以单独部署。其一般由一个源码仓库或一个容器镜像创建而来，其具有以下关键属性：

- 构建源属性   

> 定义当前服务的创建来源和持续集成策略。创建源目前分为源码、容器镜像和应用市场，针对不同的来源类型提供不同的策略。例如源码类型：提供源码仓库信息、自动构建策略、源码编译策略和设置等。

- 伸缩属性   
> 应用伸缩分为垂直伸缩和水平伸缩，垂直伸缩是通过增加或减少一个实例内存和CPU的资源调整应用负载能力，水平伸缩是通过增加或减少应用实例调整应用负载能力和容错能力。具备水平伸缩属性的应用一般是无状态应用或可水平伸缩的集群应用。

- 环境与依赖属性
> 应用环境大部分基于环境变量定义，其他应用依赖，例如一个网站应用依赖Mysql数据库应用通过依赖属性定义，建立服务发现。

- 端口属性   
> 应用对外服务的范围通过应用端口属性定义，一般一个应用具有一个服务端口，根据其是对内服务还是对公网服务的不同更改其服务注册范围和方式。

- 存储属性
> 应用产生数据持久化存储要求不一样，可以选择不同的持久化形式，也可以通过共享的形式读取其他应用产生的数据。

- 插件属性   
> 应用需要开通不同的附加功能可以通过开通不同的插件。

- 健康属性   
> 默认的情况下平台任务应用进程启动即运行成功，实际情况下应用业务并不一定健康，定义业务级的健康检查机制有助于平台正确的判断应用状态和进行自动化的管理操作。

- 监控属性   
> 平台默认为应用提供业务级性能分析，需要应用指定业务服务协议。

- 部署属性   
> 平台为不同的应用绑定不同的部署和调度策略，应用需要指定部署类型，包含有状态应用和无状态应用，一般需要固定网络名称或存储不同共享的应用设置为有状态应用。

- 版本构建属性   
> 应用的构建来源不同平台体现的管理操作不同，目前应用构建来源有源码或Docker镜像，不同的源码类型平台生成的默认环境配置不同，正常情况下应用构建属性由平台智能识别。

### 插件 (Plugin)

插件是为业务组件提供额外功能的扩展，其主要是以实体程序的形式，其具有与绑定应用一致的运行环境（存储、网络、环境配置）。插件分为几个类型：

- 入口网络治理类型   
> 入口网络治理插件通常是指能够拦截应用端口服务的插件，外部请求先经过插件再到达应用。例如权限验证，防火墙或日志记录。

- 出口网络治理类型   
> 出口网络治理插件通常是指能够拦截当前应用访问上游依赖服务的网络的插件，对上游服务的请求先到达插件，再由插件负载到上游服务的某个实例上，例如ServiceMesh插件。

- 性能分析类型   
> 性能分析插件能够以某种实现分析出应用的吞吐率，响应时间，访问人数等指标，通过statsd指标规范传递给平台。

- 应用初始化类型   
> 应用初始化插件在应用启动前运行完成并退出，一般完成数据初始化，外部依赖初始化等功能。

- 一般类型   
> 其他类型插件

### 应用市场(Application Market)

应用市场是Rainbond应用的管理、存储、分发的产品模型。 详情见 [应用市场的定义](http://www.rainbond.com/docs/stable/user-manual/app-store/app-market-define.html)





